# python-notes

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: about.rst  arm64_python3.md  conf.py  index.rst  markdown_links.rst
notes/: async_executor.py
tests/: conftest.py
