[tool.poetry]
name = "python-notes"
version = "0.1.0"
description = "Python Notes"
authors = [
    "Darren Weber <dazza-codes@github.com>",
]
license = "Apache-2.0"

readme = "README.md"  # Markdown files are supported
repository = "https://github.com/dazza-codes/python-notes.git"
homepage = "https://github.com/dazza-codes/python-notes"

keywords = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

include = ["notes/**/*"]
exclude = ["tests/**/*"]

packages = [
    {include = "notes"}
]

# [tool.poetry.scripts]
# hello = "notes.__main__:main"

[tool.poetry.dependencies]
python = "^3.7"

aioredis = {extras = ["hiredis"], version = "^2.0.0"}
databases = {extras = ["postgresql", "mysql", "sqlite"], version = "*"}

typer = "^0.4.0"


[tool.poetry.dev-dependencies]
py-dev-deps = "^0.3.0"
mdformat_myst = "^0.1.4"


[tool.black]
line-length = 96


[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
